--- a/lawn-maintenance.html
+++ b/lawn-maintenance.html
@@ -223,18 +223,23 @@ Manual Restarts: Pass</br></p>
 
 <li class="nav-header"><a href="./tags.html"><h4><i class="icon-tags icon-large"></i>Tags</h4></a></li>
     <li class="tag-4">
-        <a href="./tag/security.html">
-            <i class="icon-tag icon-large"></i>security
+        <a href="./tag/google.html">
+            <i class="icon-tag icon-large"></i>Google
+        </a>
+    </li>
+    <li class="tag-1">
+        <a href="./tag/wordpress.html">
+            <i class="icon-tag icon-large"></i>wordpress
         </a>
     </li>
     <li class="tag-4">
-        <a href="./tag/design.html">
-            <i class="icon-tag icon-large"></i>design
+        <a href="./tag/lawn.html">
+            <i class="icon-tag icon-large"></i>lawn
         </a>
     </li>
     <li class="tag-4">
-        <a href="./tag/talent.html">
-            <i class="icon-tag icon-large"></i>talent
+        <a href="./tag/strengths.html">
+            <i class="icon-tag icon-large"></i>strengths
         </a>
     </li>
     <li class="tag-4">
@@ -242,29 +247,24 @@ Manual Restarts: Pass</br></p>
             <i class="icon-tag icon-large"></i>yard work
         </a>
     </li>
-    <li class="tag-1">
-        <a href="./tag/automation.html">
-            <i class="icon-tag icon-large"></i>automation
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/five-pillars.html">
-            <i class="icon-tag icon-large"></i>five pillars
-        </a>
-    </li>
     <li class="tag-4">
         <a href="./tag/.html">
             <i class="icon-tag icon-large"></i>
         </a>
     </li>
-    <li class="tag-4">
-        <a href="./tag/shopping.html">
-            <i class="icon-tag icon-large"></i>shopping
+    <li class="tag-1">
+        <a href="./tag/conference.html">
+            <i class="icon-tag icon-large"></i>conference
         </a>
     </li>
-    <li class="tag-1">
-        <a href="./tag/website.html">
-            <i class="icon-tag icon-large"></i>website
+    <li class="tag-4">
+        <a href="./tag/traffic.html">
+            <i class="icon-tag icon-large"></i>traffic
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/storage.html">
+            <i class="icon-tag icon-large"></i>storage
         </a>
     </li>
     <li class="tag-4">
@@ -272,34 +272,9 @@ Manual Restarts: Pass</br></p>
             <i class="icon-tag icon-large"></i>coffee
         </a>
     </li>
-    <li class="tag-1">
-        <a href="./tag/san-antonio.html">
-            <i class="icon-tag icon-large"></i>san antonio
-        </a>
-    </li>
     <li class="tag-4">
-        <a href="./tag/car.html">
-            <i class="icon-tag icon-large"></i>car
-        </a>
-    </li>
-    <li class="tag-1">
-        <a href="./tag/cloud.html">
-            <i class="icon-tag icon-large"></i>cloud
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/modularity.html">
-            <i class="icon-tag icon-large"></i>modularity
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/women.html">
-            <i class="icon-tag icon-large"></i>women
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/storage.html">
-            <i class="icon-tag icon-large"></i>storage
+        <a href="./tag/learning.html">
+            <i class="icon-tag icon-large"></i>learning
         </a>
     </li>
     <li class="tag-4">
@@ -312,24 +287,59 @@ Manual Restarts: Pass</br></p>
             <i class="icon-tag icon-large"></i>data
         </a>
     </li>
+    <li class="tag-4">
+        <a href="./tag/reflection.html">
+            <i class="icon-tag icon-large"></i>reflection
+        </a>
+    </li>
     <li class="tag-1">
-        <a href="./tag/conference.html">
-            <i class="icon-tag icon-large"></i>conference
+        <a href="./tag/hangout.html">
+            <i class="icon-tag icon-large"></i>hangout
         </a>
     </li>
     <li class="tag-4">
-        <a href="./tag/database.html">
-            <i class="icon-tag icon-large"></i>database
+        <a href="./tag/modularity.html">
+            <i class="icon-tag icon-large"></i>modularity
         </a>
     </li>
     <li class="tag-4">
-        <a href="./tag/strengths.html">
-            <i class="icon-tag icon-large"></i>strengths
+        <a href="./tag/five-pillars.html">
+            <i class="icon-tag icon-large"></i>five pillars
         </a>
     </li>
     <li class="tag-4">
-        <a href="./tag/lawn.html">
-            <i class="icon-tag icon-large"></i>lawn
+        <a href="./tag/launch.html">
+            <i class="icon-tag icon-large"></i>launch
+        </a>
+    </li>
+    <li class="tag-1">
+        <a href="./tag/website.html">
+            <i class="icon-tag icon-large"></i>website
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/talent.html">
+            <i class="icon-tag icon-large"></i>talent
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/security.html">
+            <i class="icon-tag icon-large"></i>security
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/design.html">
+            <i class="icon-tag icon-large"></i>design
+        </a>
+    </li>
+    <li class="tag-1">
+        <a href="./tag/automation.html">
+            <i class="icon-tag icon-large"></i>automation
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/women.html">
+            <i class="icon-tag icon-large"></i>women
         </a>
     </li>
     <li class="tag-4">
@@ -337,24 +347,29 @@ Manual Restarts: Pass</br></p>
             <i class="icon-tag icon-large"></i>protection
         </a>
     </li>
+    <li class="tag-1">
+        <a href="./tag/cloud.html">
+            <i class="icon-tag icon-large"></i>cloud
+        </a>
+    </li>
     <li class="tag-4">
-        <a href="./tag/reflection.html">
-            <i class="icon-tag icon-large"></i>reflection
+        <a href="./tag/car.html">
+            <i class="icon-tag icon-large"></i>car
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/database.html">
+            <i class="icon-tag icon-large"></i>database
         </a>
     </li>
     <li class="tag-1">
-        <a href="./tag/wordpress.html">
-            <i class="icon-tag icon-large"></i>wordpress
+        <a href="./tag/san-antonio.html">
+            <i class="icon-tag icon-large"></i>san antonio
         </a>
     </li>
     <li class="tag-4">
-        <a href="./tag/learning.html">
-            <i class="icon-tag icon-large"></i>learning
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/google.html">
-            <i class="icon-tag icon-large"></i>Google
+        <a href="./tag/shopping.html">
+            <i class="icon-tag icon-large"></i>shopping
         </a>
     </li>
 
