--- a/aantv-drinking-game.html
+++ b/aantv-drinking-game.html
@@ -126,7 +126,7 @@
 <iframe width="560" height="315" src="https://www.youtube.com/embed/7l8tGXeSv6Q" frameborder="0" allowfullscreen></iframe>
 
 <p><br>
-Angela gets a mention on AANTV
+Angela gets a mention on AANTV<br>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/YsLhkp-8z0U" frameborder="0" allowfullscreen></iframe></p>
         </div><!-- /.entry-content -->
     </article>
@@ -165,83 +165,13 @@ Angela gets a mention on AANTV
 
 <li class="nav-header"><a href="./tags.html"><h4><i class="icon-tags icon-large"></i>Tags</h4></a></li>
     <li class="tag-4">
-        <a href="./tag/lawn.html">
-            <i class="icon-tag icon-large"></i>lawn
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/drink.html">
-            <i class="icon-tag icon-large"></i>drink
-        </a>
-    </li>
-    <li class="tag-1">
-        <a href="./tag/website.html">
-            <i class="icon-tag icon-large"></i>website
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/database.html">
-            <i class="icon-tag icon-large"></i>database
-        </a>
-    </li>
-    <li class="tag-1">
-        <a href="./tag/san-antonio.html">
-            <i class="icon-tag icon-large"></i>san antonio
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/google.html">
-            <i class="icon-tag icon-large"></i>Google
-        </a>
-    </li>
-    <li class="tag-1">
-        <a href="./tag/wordpress.html">
-            <i class="icon-tag icon-large"></i>wordpress
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/shopping.html">
-            <i class="icon-tag icon-large"></i>shopping
-        </a>
-    </li>
-    <li class="tag-1">
-        <a href="./tag/automation.html">
-            <i class="icon-tag icon-large"></i>automation
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/design.html">
-            <i class="icon-tag icon-large"></i>design
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/security.html">
-            <i class="icon-tag icon-large"></i>security
-        </a>
-    </li>
-    <li class="tag-4">
         <a href="./tag/modularity.html">
             <i class="icon-tag icon-large"></i>modularity
         </a>
     </li>
     <li class="tag-4">
-        <a href="./tag/data.html">
-            <i class="icon-tag icon-large"></i>data
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/women.html">
-            <i class="icon-tag icon-large"></i>women
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/strengths.html">
-            <i class="icon-tag icon-large"></i>strengths
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/five-pillars.html">
-            <i class="icon-tag icon-large"></i>five pillars
+        <a href="./tag/voc.html">
+            <i class="icon-tag icon-large"></i>voc
         </a>
     </li>
     <li class="tag-4">
@@ -250,13 +180,23 @@ Angela gets a mention on AANTV
         </a>
     </li>
     <li class="tag-4">
-        <a href="./tag/talent.html">
-            <i class="icon-tag icon-large"></i>talent
+        <a href="./tag/car.html">
+            <i class="icon-tag icon-large"></i>car
+        </a>
+    </li>
+    <li class="tag-1">
+        <a href="./tag/san-antonio.html">
+            <i class="icon-tag icon-large"></i>san antonio
         </a>
     </li>
     <li class="tag-4">
-        <a href="./tag/yard-work.html">
-            <i class="icon-tag icon-large"></i>yard work
+        <a href="./tag/launch.html">
+            <i class="icon-tag icon-large"></i>launch
+        </a>
+    </li>
+    <li class="tag-1">
+        <a href="./tag/hangout.html">
+            <i class="icon-tag icon-large"></i>hangout
         </a>
     </li>
     <li class="tag-4">
@@ -269,19 +209,9 @@ Angela gets a mention on AANTV
             <i class="icon-tag icon-large"></i>coffee
         </a>
     </li>
-    <li class="tag-1">
-        <a href="./tag/hangout.html">
-            <i class="icon-tag icon-large"></i>hangout
-        </a>
-    </li>
     <li class="tag-4">
-        <a href="./tag/launch.html">
-            <i class="icon-tag icon-large"></i>launch
-        </a>
-    </li>
-    <li class="tag-1">
-        <a href="./tag/conference.html">
-            <i class="icon-tag icon-large"></i>conference
+        <a href="./tag/protection.html">
+            <i class="icon-tag icon-large"></i>protection
         </a>
     </li>
     <li class="tag-4">
@@ -290,8 +220,18 @@ Angela gets a mention on AANTV
         </a>
     </li>
     <li class="tag-4">
-        <a href="./tag/.html">
-            <i class="icon-tag icon-large"></i>
+        <a href="./tag/strengths.html">
+            <i class="icon-tag icon-large"></i>strengths
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/security.html">
+            <i class="icon-tag icon-large"></i>security
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/lawn.html">
+            <i class="icon-tag icon-large"></i>lawn
         </a>
     </li>
     <li class="tag-1">
@@ -300,13 +240,28 @@ Angela gets a mention on AANTV
         </a>
     </li>
     <li class="tag-4">
-        <a href="./tag/car.html">
-            <i class="icon-tag icon-large"></i>car
+        <a href="./tag/google.html">
+            <i class="icon-tag icon-large"></i>Google
+        </a>
+    </li>
+    <li class="tag-1">
+        <a href="./tag/automation.html">
+            <i class="icon-tag icon-large"></i>automation
+        </a>
+    </li>
+    <li class="tag-1">
+        <a href="./tag/conference.html">
+            <i class="icon-tag icon-large"></i>conference
         </a>
     </li>
     <li class="tag-4">
-        <a href="./tag/voc.html">
-            <i class="icon-tag icon-large"></i>voc
+        <a href="./tag/data.html">
+            <i class="icon-tag icon-large"></i>data
+        </a>
+    </li>
+    <li class="tag-1">
+        <a href="./tag/wordpress.html">
+            <i class="icon-tag icon-large"></i>wordpress
         </a>
     </li>
     <li class="tag-4">
@@ -315,8 +270,18 @@ Angela gets a mention on AANTV
         </a>
     </li>
     <li class="tag-4">
-        <a href="./tag/protection.html">
-            <i class="icon-tag icon-large"></i>protection
+        <a href="./tag/learning.html">
+            <i class="icon-tag icon-large"></i>learning
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/.html">
+            <i class="icon-tag icon-large"></i>
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/women.html">
+            <i class="icon-tag icon-large"></i>women
         </a>
     </li>
     <li class="tag-4">
@@ -325,8 +290,43 @@ Angela gets a mention on AANTV
         </a>
     </li>
     <li class="tag-4">
-        <a href="./tag/learning.html">
-            <i class="icon-tag icon-large"></i>learning
+        <a href="./tag/drink.html">
+            <i class="icon-tag icon-large"></i>drink
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/database.html">
+            <i class="icon-tag icon-large"></i>database
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/yard-work.html">
+            <i class="icon-tag icon-large"></i>yard work
+        </a>
+    </li>
+    <li class="tag-1">
+        <a href="./tag/website.html">
+            <i class="icon-tag icon-large"></i>website
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/five-pillars.html">
+            <i class="icon-tag icon-large"></i>five pillars
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/shopping.html">
+            <i class="icon-tag icon-large"></i>shopping
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/design.html">
+            <i class="icon-tag icon-large"></i>design
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/talent.html">
+            <i class="icon-tag icon-large"></i>talent
         </a>
     </li>
 
