--- a/launch-hangout.html
+++ b/launch-hangout.html
@@ -167,73 +167,28 @@ We share best pratices and how we come in on the ground floor to make sure custo
 
 <li class="nav-header"><a href="./tags.html"><h4><i class="icon-tags icon-large"></i>Tags</h4></a></li>
     <li class="tag-4">
-        <a href="./tag/modularity.html">
-            <i class="icon-tag icon-large"></i>modularity
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/voc.html">
-            <i class="icon-tag icon-large"></i>voc
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/storage.html">
-            <i class="icon-tag icon-large"></i>storage
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/car.html">
-            <i class="icon-tag icon-large"></i>car
-        </a>
-    </li>
-    <li class="tag-1">
-        <a href="./tag/san-antonio.html">
-            <i class="icon-tag icon-large"></i>san antonio
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/launch.html">
-            <i class="icon-tag icon-large"></i>launch
-        </a>
-    </li>
-    <li class="tag-1">
-        <a href="./tag/hangout.html">
-            <i class="icon-tag icon-large"></i>hangout
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/tv.html">
-            <i class="icon-tag icon-large"></i>tv
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/coffee.html">
-            <i class="icon-tag icon-large"></i>coffee
-        </a>
-    </li>
-    <li class="tag-4">
         <a href="./tag/protection.html">
             <i class="icon-tag icon-large"></i>protection
         </a>
     </li>
     <li class="tag-4">
-        <a href="./tag/traffic.html">
-            <i class="icon-tag icon-large"></i>traffic
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/strengths.html">
-            <i class="icon-tag icon-large"></i>strengths
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/security.html">
-            <i class="icon-tag icon-large"></i>security
+        <a href="./tag/data.html">
+            <i class="icon-tag icon-large"></i>data
         </a>
     </li>
     <li class="tag-4">
         <a href="./tag/lawn.html">
             <i class="icon-tag icon-large"></i>lawn
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/five-pillars.html">
+            <i class="icon-tag icon-large"></i>five pillars
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/cleaning.html">
+            <i class="icon-tag icon-large"></i>cleaning
         </a>
     </li>
     <li class="tag-1">
@@ -242,53 +197,8 @@ We share best pratices and how we come in on the ground floor to make sure custo
         </a>
     </li>
     <li class="tag-4">
-        <a href="./tag/google.html">
-            <i class="icon-tag icon-large"></i>Google
-        </a>
-    </li>
-    <li class="tag-1">
-        <a href="./tag/automation.html">
-            <i class="icon-tag icon-large"></i>automation
-        </a>
-    </li>
-    <li class="tag-1">
-        <a href="./tag/conference.html">
-            <i class="icon-tag icon-large"></i>conference
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/data.html">
-            <i class="icon-tag icon-large"></i>data
-        </a>
-    </li>
-    <li class="tag-1">
-        <a href="./tag/wordpress.html">
-            <i class="icon-tag icon-large"></i>wordpress
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/game.html">
-            <i class="icon-tag icon-large"></i>game
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/learning.html">
-            <i class="icon-tag icon-large"></i>learning
-        </a>
-    </li>
-    <li class="tag-4">
         <a href="./tag/.html">
             <i class="icon-tag icon-large"></i>
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/women.html">
-            <i class="icon-tag icon-large"></i>women
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/reflection.html">
-            <i class="icon-tag icon-large"></i>reflection
         </a>
     </li>
     <li class="tag-4">
@@ -302,18 +212,63 @@ We share best pratices and how we come in on the ground floor to make sure custo
         </a>
     </li>
     <li class="tag-4">
-        <a href="./tag/yard-work.html">
-            <i class="icon-tag icon-large"></i>yard work
-        </a>
-    </li>
-    <li class="tag-1">
-        <a href="./tag/website.html">
-            <i class="icon-tag icon-large"></i>website
+        <a href="./tag/coffee.html">
+            <i class="icon-tag icon-large"></i>coffee
         </a>
     </li>
     <li class="tag-4">
-        <a href="./tag/five-pillars.html">
-            <i class="icon-tag icon-large"></i>five pillars
+        <a href="./tag/strengths.html">
+            <i class="icon-tag icon-large"></i>strengths
+        </a>
+    </li>
+    <li class="tag-1">
+        <a href="./tag/wordpress.html">
+            <i class="icon-tag icon-large"></i>wordpress
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/women.html">
+            <i class="icon-tag icon-large"></i>women
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/modularity.html">
+            <i class="icon-tag icon-large"></i>modularity
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/learning.html">
+            <i class="icon-tag icon-large"></i>learning
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/design.html">
+            <i class="icon-tag icon-large"></i>design
+        </a>
+    </li>
+    <li class="tag-1">
+        <a href="./tag/san-antonio.html">
+            <i class="icon-tag icon-large"></i>san antonio
+        </a>
+    </li>
+    <li class="tag-1">
+        <a href="./tag/hangout.html">
+            <i class="icon-tag icon-large"></i>hangout
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/talent.html">
+            <i class="icon-tag icon-large"></i>talent
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/reflection.html">
+            <i class="icon-tag icon-large"></i>reflection
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/car.html">
+            <i class="icon-tag icon-large"></i>car
         </a>
     </li>
     <li class="tag-4">
@@ -322,13 +277,73 @@ We share best pratices and how we come in on the ground floor to make sure custo
         </a>
     </li>
     <li class="tag-4">
-        <a href="./tag/design.html">
-            <i class="icon-tag icon-large"></i>design
+        <a href="./tag/light.html">
+            <i class="icon-tag icon-large"></i>light
+        </a>
+    </li>
+    <li class="tag-1">
+        <a href="./tag/conference.html">
+            <i class="icon-tag icon-large"></i>conference
+        </a>
+    </li>
+    <li class="tag-1">
+        <a href="./tag/automation.html">
+            <i class="icon-tag icon-large"></i>automation
         </a>
     </li>
     <li class="tag-4">
-        <a href="./tag/talent.html">
-            <i class="icon-tag icon-large"></i>talent
+        <a href="./tag/tv.html">
+            <i class="icon-tag icon-large"></i>tv
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/housekeeping.html">
+            <i class="icon-tag icon-large"></i>housekeeping
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/security.html">
+            <i class="icon-tag icon-large"></i>security
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/yard-work.html">
+            <i class="icon-tag icon-large"></i>yard work
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/voc.html">
+            <i class="icon-tag icon-large"></i>voc
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/traffic.html">
+            <i class="icon-tag icon-large"></i>traffic
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/storage.html">
+            <i class="icon-tag icon-large"></i>storage
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/launch.html">
+            <i class="icon-tag icon-large"></i>launch
+        </a>
+    </li>
+    <li class="tag-1">
+        <a href="./tag/website.html">
+            <i class="icon-tag icon-large"></i>website
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/google.html">
+            <i class="icon-tag icon-large"></i>Google
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/game.html">
+            <i class="icon-tag icon-large"></i>game
         </a>
     </li>
 
